--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="estilo.css" />
         <script src="script.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
     </head>
     <body>
         <div class="conteudo">
@@ -30,7 +32,7 @@
                             <option value="/">Divisão</option>
                             <option value="*">Multiplicação</option>
                         </select>
-                    </div>
+                    </div><br>
                     <div class="botao">
                         <button type="button" onclick="calcularValores()">Calcular</button>
                     </div>
@@ -42,5 +44,7 @@
                 </form>
             </div>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
     </body>
  </html>
